[package]
name = "genomdb"
version = "0.1.0"
edition = "2018"

[dependencies]
dotenv = "0.15.0"
clap = "2.33.3"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"
pickledb = "0.4.1"
xxhash-rust = { version = "0.8.2", features = ["const_xxh3"] }
